# devman-repo

./: .gitignore  .tmuxp.yaml  CHANGELOG.md  README.md  copier.yml
.github/workflows/: ci.yml
scripts/: validate_render.py
{{ project_slug }}/: .envrc  .gitignore  LICENSE  README.md  justfile  pyproject.toml
{{ project_slug }}/.devman/: devenv.nix  devenv.yaml
{{ project_slug }}/src/{{ package_name }}/: __init__.py  cli.py
{{ project_slug }}/tests/: test_cli.py
